change color and position of elements and finish screen responsive

--- a/style.css
+++ b/style.css
@@ -13,8 +13,9 @@ body,
 }
 
 body {
-  font-family: sans-serif;
-  background-color: #f9fbfd;
+  font-family: 'Open Sans', sans-serif;
+  /* font-family: sans-serif; */
+  background-color: #a5a9aa;
 }
 
 .wrapper {
@@ -31,7 +32,7 @@ header {
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #d8e0e2;
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
@@ -42,11 +43,15 @@ header {
   padding: 30px 40px;
 }
 
+h2 {
+  text-align: center;
+}
+
 .card-header::after {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4a585c;
   height: 2px;
 }
 
@@ -58,11 +63,12 @@ header {
   text-align: center;
 }
 
+
 .card-footer::before {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4a585c;
   height: 2px;
 }
 
@@ -72,25 +78,40 @@ header {
   clear: both;
 }
 
+.btn-block {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
-  border-radius: 25px;
+  background-color: #2f4650;
+  border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
-  color: hsl(0, 0%, 100%);
+  color: #d8e0e2;
   display: inline-block;
-  font-size: 22px;
-  line-height: 22px;
-  margin: 16px 16px 16px 20px;
+  font-size: 15px;
+  line-height: 15px;
+  margin: 0px;
+  margin-top: 16px;
   padding: 14px 34px;
   text-align: center;
   cursor: pointer;
+  width: 25%;
+}
+
+.btn:nth-of-type(1) {
+  width: 100%;
 }
 
 button[disabled] {
   cursor: default;
-  background: #c0c7cf;
+  background: #A9E6F5;
 }
 
 .float-right {
@@ -98,6 +119,7 @@ button[disabled] {
 }
 
 #password {
+  background-color: #e8f0f1;
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -116,6 +138,27 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+}
+
+@media screen and (max-width: 991px) {
+  .btn-block {
+    width: 85%;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .btn-block {
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .btn {
+    width: 70%;
+  }
+
+  .btn:nth-of-type(1) {
+    width: 70%;
+  }
 }
 
 @media (max-width: 690px) {
